# python-screen-capture-lite

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/: CPM.cmake
src/: WindowCapture.cpp  WindowCapture.h  main.cpp
src/pybind/: ScreenCaptureLite.cpp  WindowCapture.cpp
src/pybind/converters/: ndarray_converter.h
